# topo-v8

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AI-DECLARATION.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  topo-backend.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: TopoV8CompilerFlags.cmake  topo-v8Config.cmake.in
lib/: CMakeLists.txt
lib/Check/: CMakeLists.txt
lib/Check/Extract/: CMakeLists.txt  TypeScriptCallEdgeExtractor.cpp  TypeScriptCallEdgeExtractor.h  TypeScriptCallSiteExtractor.cpp  TypeScriptCallSiteExtractor.h  TypeScriptImportExtractor.cpp  TypeScriptImportExtractor.h  TypeScriptSymbolAccessExtractor.cpp  TypeScriptSymbolAccessExtractor.h  TypeScriptSymbolExtractor.cpp  TypeScriptSymbolExtractor.h  V8SourceScanner.h
lib/Codegen/: CMakeLists.txt  V8Codegen.cpp  V8Codegen.h
lib/Debug/: CMakeLists.txt  SourceMapResolver.cpp  SourceMapResolver.h
lib/Debug/test/: CMakeLists.txt  SourceMapResolverTest.cpp
lib/TsServer/: CMakeLists.txt  TsServerBridge.cpp  TsServerBridge.h
lib/TsServer/test/: CMakeLists.txt  TsServerBridgeTest.cpp
prototypes/visibility-pass/: README.md  index.mjs  package.json  test.mjs
prototypes/visibility-pass/fixtures/: sample.input.ts  sample.visibility.json
tools/containment-guard-transform/: index.mjs  package-lock.json  package.json  smoke.test.mjs
tools/stage-assert-transform/: index.mjs  package-lock.json  package.json  smoke.test.mjs
tools/visibility-transform/: index.mjs  package-lock.json  package.json  smoke.test.mjs
